# audapolis_instructions

./: pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/contents/: 1_timed_text_style_guide.rst  2_english_style_guide.rst  3_audapolis_procedures.rst
docs/source/projects/: 1_wwiioh.rst
